<resources>
    <string name="app_name">Debtor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up now!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_my_lists">My Lists</string>
    <string name="title_activity_contact_list">Contacts</string>
    <string name="title_activity_history">Activity Log</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">My Account</string>



    <string name="Sign_in_facebook">Sign in with Facebook</string>
    <string name="Sign_in_twitter">Sign in with Twitter</string>
    <string name="Sign_in_google">Sign in with Google+</string>
    <string name="or">or</string>
    <string name="Sign_up">Sign up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_lists">Expences</string>
    <string name="history">Activity log</string>
    <string name="contact_list">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="sync_debts">Sync</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="user_avatar">User avatar</string>
    <string name="my_balance">My balance:</string>
    <string name="you_owe">You owe</string>
    <string name="you_are_owed">You are owed</string>
    <string name="filters">Filters</string>
    <string name="total">Total:</string>
    <string name="test_amount">000.00</string>
    <string name="prompt_name">Name*</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="text_sample">Sample Text</string>
    <string name="create_debt">Create a debt</string>
    <string name="shared_debt">Calculate a shared Debt</string>
    <string name="confirm">Confirm</string>
    <string name="with">With</string>
    <string name="reason">Reason</string>
    <string name="date">Date</string>
    <string name="comment">Comment</string>
    <string name="changes_applied">Changes applied</string>

    <string-array name="currency_array">
        <item>EUR-Euro</item>
        <item>USD-US Dollar</item>
        <item>GPD-Pound Sterling</item>
        <item>RUB-Russian Ruble</item>
    </string-array>
    <string name="title_activity_account_edit">Account Edit</string>
    <string name="apply">Apply</string>
</resources>
