<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_drawer_top">
        <item
            android:id="@+id/my_debts_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_payment"
            android:title="@string/my_lists" />
        <item
            android:id="@+id/history_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/contacts_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_contacts"
            android:title="@string/contact_list" />

        <item
            android:id="@+id/notifications_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_notifications_none"
            android:title="@string/notifications" />




    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_drawer_bottom"
        android:layout_alignParentBottom="true">
        <item
            android:id="@+id/sync_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_sync"
            android:title="@string/sync_debts" />

        <item
            android:id="@+id/settings_drawer"
            android:checkable="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />


    </group>



</menu>
