<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_lists_drawer"
            android:icon="@drawable/ic_list"
            android:title= "@string/my_lists"/>
        <item
            android:id="@+id/shared_payment_drawer"
            android:icon="@drawable/ic_payment"
            android:title= "@string/shared_payment"/>
        <item
            android:id="@+id/history_drawer"
            android:icon="@drawable/ic_history"
            android:title= "@string/history"/>
        <item
            android:id="@+id/contacts_drawer"
            android:icon="@drawable/ic_contact_list"
            android:title= "@string/contact_list"/>

    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/sync_drawer"
                android:icon="@drawable/ic_sync"
                android:title="@string/sync_debts" />
            <item
                android:id="@+id/account_settings_drawer"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
