<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/colorSecondary"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="12dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_weight="1"
        android:contentDescription="@string/user_avatar"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical"
        android:paddingEnd="24dp"
        android:paddingStart="8dp">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_balance"
            android:textAllCaps="true"
            android:textColor="@color/colorStrongGrey"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/you_owe"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00€"
                android:textAllCaps="true"
                android:textColor="@color/colorRed"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/you_are_owed"
                android:textAllCaps="false"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <TextView
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00€"
                android:textAllCaps="true"
                android:textColor="@color/colorBlue"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/filters"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold" />

</LinearLayout>