<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:tag="@string/or"
    tools:context=".ui.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/prompt_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/prompt_email" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_size"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_new_account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contextClickable="true"
                android:text="@string/dont_have_an_account"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="36dp"
            android:text="@string/or"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@android:color/background_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@android:color/background_dark" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/other_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-12dp"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/login_facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorFacebook"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="10dp"
            android:text="@string/Sign_in_facebook"
            android:textColor="@android:color/background_light"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login_twitter_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorTwitter"
            android:drawableStart="@drawable/ic_twitter"
            android:paddingStart="10dp"
            android:text="@string/Sign_in_twitter"
            android:textColor="@android:color/background_light"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login_google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorGoogle"
            android:drawableStart="@drawable/ic_googleplus"
            android:paddingStart="10dp"
            android:text="@string/Sign_in_google"
            android:textColor="@android:color/background_light"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</LinearLayout>