<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MyListsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSecondary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/header_contact_adapter_user_avatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:contentDescription="@string/user_avatar"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingEnd="24dp"
                android:paddingStart="8dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_balance"
                    android:textAllCaps="true"
                    android:textColor="@color/colorStrongGrey"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/you_owe"
                        android:textAllCaps="false"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <TextView
                        android:id="@+id/header_contact_adapter_you_owe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00€"
                        android:textAllCaps="true"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/you_are_owed"
                        android:textAllCaps="false"
                        android:textColor="@color/common_google_signin_btn_text_dark_default" />

                    <TextView
                        android:id="@+id/header_contact_adapter_you_are_owed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00€"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlue"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/header_contact_adapter_button_filters"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/filters"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mylists_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light"
            android:scrollbars="vertical" />


    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>